Fixes header overlap issues

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -3,6 +3,7 @@ header {
     position: fixed;
     bottom: 2rem;
     left: 1rem;
+    height: fit-content;
 
     nav {
         ul {
